# embedded-snake

./: .gitignore  CMakeLists.txt  color_palette.h  debug.h  drawing.c  drawing.h  game.c  game.h  input.c  input.h  main.c  settings.h  snake.c  snake.h  vector2.c  vector2.h  world.c  world.h
